# test-code

./: README.md
django-python/: README.md  main.py  pyproject.toml
django-python/testproject/testproject/: settings.py
leptos-rust/: CNAME  Cargo.toml  Dockerfile  README.md  docker-compose.yml
leptos-rust/src/: main.rs
