[package]
name = "leptos-test"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.3"
wasm-bindgen = "0.2"
wasm-pack = "0.10"
server_fn_macro = { version = "0.3.1", features = ["stable"] }
axum = "0.6" # Add the Axum crate
tokio = { version = "1", features = ["full"] } # Axum requires Tokio as an async runtime

[[bin]]
name = "leptos-test"
path = "src/main.rs"

